--- a/index.html
+++ b/index.html
@@ -102,7 +102,96 @@
             "oct8.txt": "Last night, I dreamed that I arrived to Thanksgiving at my grandparents' house late. I went into the kitchen to fill up a plate, but the only food I found was microwave popcorn and 72 cans of Cheez Whiz. Yes, I counted. Then I woke up.",
             "oct15.txt": "In this dream I awoke at a hotel and for some reason I was traveling downstairs to ask my parents a question. They were in the pool area on the first floor but once I got down to them (via stairs) I realized that I had forgotten something. I don't know what I had forgotten but I knew I had to return to my room. On the way back up to my room on the 12th floor I took the elevator. Why I didn't take it down I don't know. \n\nInside the elevator was an operator and a little kid sitting on a bench. In the middle of the elevator there was a large dial that resembled a clock and the operator told me that I had to visualize in my mind the floor I wanted to go to in order to get there. I thought about the number 12 and saw the hand on the clock move toward it but it wouldn't quite get there. Then I noticed that on the clock face were the words moon base and I immediately started thinking about that. As that happened the elevator took off through the roof of the building and starting hurtling through space. The operator had disappeared and just me and the kid remained. The elevator soon went to and we were somehow breathing in space as we went toward the moon. The little kid then transformed into a bird like creature and protected us from a hail of comets, alarm clock."
           },
-          medical: {}
+          medical: {
+            "CITYCLINIC.txt": "Patient Information\n\
+Name: Alphonse Laurencic\n\
+Home Phone: 555-991-9921\n\
+Address: 123 Fake St\n\
+  Central City, USA\n\
+Office Phone: \n\
+Patient ID: Q289-425\n\
+Fax: \n\
+Birth Date: 02/06/1983\n\
+Status: Active\n\
+Gender: Male\n\
+Marital Status: Single\n\
+Contact By: Phone\n\
+Race: Caucasian\n\
+Soc Sec No: xxx-xxx-xxxx\n\
+Language: English\n\
+Resp Prov: Andrew Mulpik\n\
+MRN: MR-295-3237\n\
+Referred by:  \n\
+Emp. Status: Full-time\n\
+Email:  \n\
+Sens Chart: No\n\
+\n\
+Problems\n\
+\n\
+LUNG CANCER (ICD-110.)\n\
+Prognosis\n\
+\n\
+TERMINAL\n\
+\n\
+Medications\n\
+\n\
+PRINIVIL TABS 20 MG (LISINOPRIL) 1 po qd\n\
+Last Refill: #30 x 2 : Andrew Mulpik MD (08/27/2010)\n\
+HUMULIN INJ 70/30 (INSULIN REG & ISOPHANE (HUMAN)) 20 units ac breakfast\n\
+Last Refill: #600 u x 0 : Andrew Mulpik MD (08/27/2010)\n\
+\n\
+Directives\n\
+\n\
+Allergies and Adverse Reactions (! = critical)\n\
+\n\
+3/18/2015 - Office Visit: F/u Chest Pains\n\
+Provider: Andrew Mulpik MD\n\
+Location of Care: Central City Clinic\n\
+\n\
+OFFICE VISIT\n\
+\n\
+History of Present Illness\n\
+Reason for visit: Routine check up\n\
+Chief Complaint: Chest Pain\n\
+\n\
+History\n\
+\n\
+Hyperglycemic Symptoms \n\
+Polyuria: no\n\
+Polydipsia: no\n\
+Blurred vision: yes\n\
+\n\
+Sympathomimetic Symptoms \n\
+Diaphoresis: no\n\
+Agitation: no\n\
+Tremor: yes\n\
+Palpitations: no\n\
+Insomnia: no\n\
+\n\
+Neuroglycopenic Symptoms \n\
+Confusion: no\n\
+Lethargy: no\n\
+Somnolence: no\n\
+Amnesia: no\n\
+Stupor: no\n\
+Seizures: no\n\
+\n\
+Review of Systems\n\
+\n\
+General: denies fatigue, malaise, fever, weight loss\n\
+Eyes: diplopia, irritation, discharge\n\
+Ear/Nose/Throat: denies ear pain or discharge, nasal obstruction or discharge, sore throat\n\
+Cardiovascular: palpitations, paroxysmal nocturnal dyspnea, orthopnea, edema Respiratory: denies coughing, wheezing, dyspnea, hemoptysis\n\
+Gastrointestinal: dysphagia, nausea, vomiting, diarrhea, constipation\n\
+Genitourinary: denies hematuria, frequency, urgency, dysuria, discharge, impotence, incontinence\n\
+Musculoskeletal: denies back pain, joint swelling, joint stiffness, joint pain\n\
+Skin: denies rashes, itching, lumps, sores, lesions, color change\n\
+Neurologic: denies syncope, seizures, transient paralysis, weakness, paresthesias\n\
+Psychiatric: denies depression, anxiety, mental disturbance, difficulty sleeping, suicidal ideation, hallucinations, paranoia\n\
+Endocrine: denies polyuria, polydipsia, polyphagia, weight change, heat or cold intolerance\n\
+Heme/Lymphatic: denies easy or excessive bruising, history of blood transfusions, anemia, bleeding disorders, adenopathy, chills, sweats\n\
+Allergic/Immunologic: denies urticaria, hay fever, frequent UTIs; denies HIV high risk behaviors\n"
+          }
         },
         mail: {},
         apps: {
